Remove ununsed files

--- a/Project.toml
+++ b/Project.toml
@@ -1,3 +1,4 @@
 [deps]
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
+SimpleUnPack = "ce78b400-467f-4804-87d8-8f486da07d0a"
 Tenkai = "a4f5eaf3-cc41-4395-bb6a-2b58fc770896"
